# fsrv

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: trie.h
src/client/: main.cpp
src/server/: main.cpp
